--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       dockerfile: dockerfile
     depends_on:
       - db
+      - redis
     env_file:
       - .env
     environment:
@@ -29,6 +30,15 @@ services:
       DB_NAME: ${DB_NAME}
     ports:
       - "${API_PORT}:${API_PORT}"
+    networks:
+      - backend
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    restart: always
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     networks:
       - backend
 
