--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "bcrypt (<4.1.0)",
     "slowapi (>=0.1.9,<0.2.0)",
     "cloudinary (>=1.44.1,<2.0.0)",
-    "fastapi-mail (>=1.5.0,<2.0.0)",   
+    "fastapi-mail (>=1.5.0,<2.0.0)",
+    "redis (>=6.4.0,<7.0.0)",   
 ]
 
 [tool.poetry]
