--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ packages = [
 ]
 
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.3"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
