--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 logs
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -62,3 +63,4 @@ dmypy.json
 .DS_Store
 Thumbs.db
 desktop.ini
+test.db
