--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,7 @@ dependencies = [
     "slowapi (>=0.1.9,<0.2.0)",
     "cloudinary (>=1.44.1,<2.0.0)",
     "fastapi-mail (>=1.5.0,<2.0.0)",
-    "redis (>=6.4.0,<7.0.0)",
-    "pytest (>=8.4.2,<9.0.0)",
-    "pytest-asyncio (>=1.2.0,<2.0.0)",   
+    "redis (>=6.4.0,<7.0.0)",   
 ]
 
 [tool.poetry]
@@ -40,6 +38,9 @@ packages = [
 [tool.poetry.group.dev.dependencies]
 sphinx = "^8.2.3"
 aiosqlite = "^0.21.0"
+pytest-cov = "^7.0.0"
+pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
